--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,14 @@ asgiref==3.4.1
 dj-database-url==1.0.0
 Django==3.2.15
 django-heroku==0.3.1
+django-on-heroku==1.1.2
 django-phonenumber-field==6.0.0
 django-tables2==2.4.1
 django-widget-tweaks==1.4.11
 gunicorn==20.1.0
 mysqlclient==2.1.1
 psycopg2==2.7.7
+psycopg2-binary==2.9.5
 pytz==2022.2.1
 sqlparse==0.4.2
 typing_extensions==4.1.1
