--- a/Pipfile
+++ b/Pipfile
@@ -5,6 +5,8 @@ name = "pypi"
 
 [packages]
 asgiref = "==3.4.1"
+certifi = "==2022.9.24"
+distlib = "==0.3.6"
 dj-database-url = "==1.0.0"
 django = "==3.2.15"
 django-heroku = "==0.3.1"
@@ -12,16 +14,24 @@ django-on-heroku = "==1.1.2"
 django-phonenumber-field = "==6.0.0"
 django-tables2 = "==2.4.1"
 django-widget-tweaks = "==1.4.11"
+filelock = "==3.4.1"
 gunicorn = "==20.1.0"
+importlib-metadata = "==4.8.3"
+importlib-resources = "==5.4.0"
 mysqlclient = "==2.1.1"
-psycopg2 = "==2.7.7"
+pipenv = "==2022.4.8"
+platformdirs = "==2.4.0"
+psycopg2 = "==2.9.5"
 psycopg2-binary = "==2.9.5"
 pytz = "==2022.2.1"
 sqlparse = "==0.4.2"
 typing-extensions = "==4.1.1"
+virtualenv = "==20.16.6"
+virtualenv-clone = "==0.5.7"
 whitenoise = "==5.3.0"
+zipp = "==3.6.0"
 
 [dev-packages]
 
 [requires]
-python_version = "3.6"
+python_version = "3.9"
